tests/reference/ast_new-statements1-e081093.stderr
tokenizer error: Token '\' is not recognized
  --> tests/parser/statements1.py:80:16
   |
80 | x = ("String " \
   |                ^ token not recognized
